# soeirotech-clean-golden-backend

./: .gitignore  README.md  auditar módulo.md  collection.json  docker-compose.yml  manage.py
backend/: .env.example  Dockerfile  __init__.py  manage.py  pyproject.toml  test_common.md  test_common.py
backend/accounts/: admin.py  models.py  serializers.py  views.py  views_dicas.md
backend/accounts/migrations/: 0001_initial.py
backend/accounts/services/: user_service.py
backend/common/: common-dicas.md  exceptions.py  mixins.py  serializers.py  utils.py  validators.py
backend/core/: asgi.py  urls.py  wsgi.py
backend/core/domain/users/: entities.py  repositories.py  services.py
backend/core/settings/: base.py  dev.py  prod.py
backend/integrations/: urls.py  views.py
backend/scripts/: backup_db.sh  entrypoint.sh  migrate.sh  seed.sh
backend/security/: serializers.py  urls.py  views.py  views_mock.py
backend/system/: urls.py  views.py
soeirotech-clean-base/: final.json
soeirotech-clean-base/SoeiroTech Clean Golden/Security/: SoeiroTechClean.json  SoeiroTech_Clean_Collection.json  accounts_collection.json  security_collection.json  soeiro_security.json  soeirotech_accounts_endpoints.json  soeirotech_full_api_collection.json
soeirotech-clean-base/postman/environments/: security_login_request.json
tests/: test_sanity.py
